--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,9 @@
-
 ul {
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
 }
 a,
 a:hover {
-  text-decoration: none !important;
-  color: rgb(19, 19, 19);
+    text-decoration: none;
 }
